fixed pricing on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,4 +213,7 @@ a {
 	.navbar-toggler {
 		font-size: 3rem;
 	}
+	#pricing {
+		padding: 100px 2%;
+	}
 }
